fix: corrigindo New Issue que surgiu no SonarCloud.
- Substituido Collectors.toList() por toList() para simplificação e garantir lista imutável, identificado pelo SonarCloud como um problema de manutenibilidade na qualidade do Software.